--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.main.banner-mode=off 
 spring.output.ansi.enabled=ALWAYS
 
-spring.dataSource.url=jdbc:h2:tcp://localhost/~/test
-spring.dataSource.user=sa
-spring.dataSource.password=
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.messages.basename=errors
