--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -5,3 +5,4 @@ address= 주소는 필수값입니다.
 phoneNumber=폰번호는 필수값입니다.
 duplicateId=아이디 중복 : {0} 는 현재 존재하는 아이디입니다.
 loginFail=아이디 or 비밀번호가 맞지 않습니다. 다시 시도해주세요.
+error=찾을 수 없습니다. 다시 입력해주세요
