--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,7 +1,9 @@
 name=이름은 필수값입니다.
 loginId=아이디는 필수값입니다.
 password=비밀번호는 필수값입니다.
+passwordCheck=비밀번호 확인값을 입력해줏[요
 address= 주소는 필수값입니다.
-phoneNumber=폰번호는 필수값입니다.
-duplicateId=아이디 중복 : {0} 는 현재 존재하는 아이디입니다.
+phoneNumber=휴대폰 번호는 필수값입니다.
+duplicateId={0} 는 현재 존재하는 아이디입니다.
 loginFail=아이디 or 비밀번호가 맞지 않습니다. 다시 시도해주세요.
+passwordFail=비밀번호 확인 실패. 다시 입력해주세요
